--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Hopen Family : Your grandparents closer more than ever.</title>
+    <% unless current_page?(root_path) %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <% end %>
     <meta name="copyright" content="Hopen Family is a registred trademark of Hopen Project, INC." />
     <meta name="description" content= "The first App where family share instantly with the grandparents" />
     <meta name="keywords" content= "grandparents loneliness, family moments, iot, silver economy, content sharing" />
