--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -65,7 +65,7 @@
   			<h2>18 <%= t('calendar.mars')%></h2>
   		</div>
   		<div class="present">
-  			<div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg1"></span></div>
+  			<div class="bauble clickable"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg1"></span></div>
   		</div>
   	</article>
     <div class="modal fade bs-example-modal-lg1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
