fix for phoneV3

--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -1,11 +1,3 @@
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-
 <%= render partial: 'layouts/navbar' %>
 <br>
 <h1 class="title_contest"><%= t('calendar.title') %></h1>
@@ -65,7 +57,7 @@
   			<h2>18 <%= t('calendar.mars')%></h2>
   		</div>
   		<div class="present">
-  			<div class="bauble clickable clickable"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg1"></span></div>
+  			<div class="bauble clickable"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg1"></span></div>
   		</div>
   	</article>
     <div class="modal fade bs-example-modal-lg1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
