--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -432,7 +432,7 @@
     </div>
 
     <article>
-      <div class="box today">
+      <div class="box">
         <h2>05 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
@@ -453,7 +453,7 @@
     </div>
 
     <article>
-      <div class="box box-gold">
+      <div class="box box-gold today">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>06 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 5<p></h2>
       </div>
       <div class="present">
@@ -485,10 +485,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C6.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C63.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -506,10 +506,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C61.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C64.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -527,10 +527,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C62.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C65.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
