--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -453,7 +453,7 @@
     </div>
 
     <article>
-      <div class="box box-gold today">
+      <div class="box box-gold">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>06 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 5<p></h2>
       </div>
       <div class="present">
@@ -474,7 +474,7 @@
     </div>
 
     <article>
-      <div class="box">
+      <div class="box today">
         <h2>07 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
