Add link facebook 07/04

--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -485,10 +485,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-C6.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C6.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409017529453947/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-C63.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C63.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409017529453947/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -506,10 +506,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-C61.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C61.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409017529453947/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-C64.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C64.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409017529453947/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -527,10 +527,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-C62.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C62.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409017529453947/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-C65.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C65.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409017529453947/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -548,10 +548,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-happy.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happy.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409017529453947/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-happyen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happyen.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409017529453947/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
