--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -474,7 +474,7 @@
     </div>
 
     <article>
-      <div class="box today">
+      <div class="box">
         <h2>07 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
@@ -537,7 +537,7 @@
     </div>
 
     <article>
-      <div class="box box-gold">
+      <div class="box box-gold today">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>10 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 6<p></h2>
       </div>
       <div class="present">
@@ -569,10 +569,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C7.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C73.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -590,10 +590,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C71.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C74.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -611,10 +611,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C72.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C75.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -632,10 +632,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happy.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happyen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
