--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -537,7 +537,7 @@
     </div>
 
     <article>
-      <div class="box box-gold today">
+      <div class="box box-gold">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>10 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 6<p></h2>
       </div>
       <div class="present">
@@ -600,7 +600,7 @@
     </div>
 
     <article>
-      <div class="box">
+      <div class="box today">
         <h2>13 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
