Add contest 8 + box today 15/04

--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -600,7 +600,7 @@
     </div>
 
     <article>
-      <div class="box today">
+      <div class="box">
         <h2>13 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
@@ -642,7 +642,7 @@
     </div>
 
     <article>
-      <div class="box">
+      <div class="box today">
         <h2>15 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
@@ -653,10 +653,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C8.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409020829453617/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C83.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409020829453617/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -673,10 +673,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C81.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409020829453617/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C84.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409020829453617/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -693,10 +693,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C82.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409020829453617/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C85.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409020829453617/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -713,10 +713,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happy.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409020829453617/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happyen.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409020829453617/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
