--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -642,7 +642,7 @@
     </div>
 
     <article>
-      <div class="box today">
+      <div class="box">
         <h2>15 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
@@ -723,7 +723,7 @@
     </div>
 
     <article>
-      <div class="box">
+      <div class="box today">
         <h2>19 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
@@ -734,10 +734,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C9.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409024089453291/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C93.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409024089453291/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -755,10 +755,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C91.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409024089453291/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C94.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409024089453291/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -776,10 +776,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C92.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409024089453291/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C95.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409024089453291/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -797,10 +797,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happy.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409024089453291/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happyen.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409024089453291/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
