--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -818,10 +818,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C10.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C103.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -839,10 +839,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C101.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C104.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -860,10 +860,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C102.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C105.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -881,10 +881,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happy.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happyen.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
