Add box for toots and tesla

--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -870,7 +870,7 @@
     </div>
 
     <article>
-      <div class="box box-gold">
+      <div class="box ">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>26 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 10<p></h2>
       </div>
       <div class="present">
@@ -881,17 +881,17 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-happy.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C102.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-happyen.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C105.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
     </div>
 
     <article>
-      <div class="box">
+      <div class="box box-gold">
         <h2>27 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
@@ -902,10 +902,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happy.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happyen.png"), "https://www.facebook.com/hopenfamily/photos/a.321252894897078.1073741828.119863055036064/409035839452116/?type=3&theater" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -954,7 +954,7 @@
     </div>
 
     <article>
-      <div class="box box-gold">
+      <div class="box">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>30 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 11<p></h2>
       </div>
       <div class="present">
@@ -1017,7 +1017,7 @@
     </div>
 
     <article>
-      <div class="box">
+      <div class="box box-gold">
         <h2>03 <%= t('calendar.mai')%></h2>
       </div>
       <div class="present">
@@ -1038,7 +1038,7 @@
     </div>
 
     <article>
-      <div class="box box-gold">
+      <div class="box">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>04 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 12<p></h2>
       </div>
       <div class="present">
@@ -1143,7 +1143,7 @@
     </div>
 
     <article>
-      <div class="box">
+      <div class="box box-gold">
         <h2>09 <%= t('calendar.mai')%></h2>
       </div>
       <div class="present">
@@ -1151,27 +1151,6 @@
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg53" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-          <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
-          <% end %>
-          <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
-          <% end %>
-        </div>
-      </div>
-    </div>
-
-    <article>
-      <div class="box box-gold">
-        <p class="p1"><%=t("calendar.winner-box") %></p><h2>10 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 13<p></h2>
-      </div>
-      <div class="present">
-        <div class="bauble clickable"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg54"></span></div>
-      </div>
-    </article>
-    <div class="modal fade bs-example-modal-lg54" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
