--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -807,7 +807,7 @@
     </div>
 
     <article>
-      <div class="box today">
+      <div class="box">
         <h2>23 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
@@ -870,11 +870,11 @@
     </div>
 
     <article>
-      <div class="box ">
-        <p class="p1"><%=t("calendar.winner-box") %></p><h2>26 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 10<p></h2>
+      <div class="box today">
+        <h2>26 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
-        <div class="bauble clickable"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg40"></span></div>
+        <div class="bauble clickable"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg40"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg40" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -892,10 +892,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>27 <%= t('calendar.avril')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>27 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 10<p></h2>
       </div>
       <div class="present">
-        <div class="bauble clickable"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg41"></span></div>
+        <div class="bauble clickable"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg41"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg41" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -955,10 +955,10 @@
 
     <article>
       <div class="box">
-        <p class="p1"><%=t("calendar.winner-box") %></p><h2>30 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 11<p></h2>
+        <h2>30 <%= t('calendar.avril')%></h2>
       </div>
       <div class="present">
-        <div class="bauble clickable"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg44"></span></div>
+        <div class="bauble clickable"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg44"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg44" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -997,7 +997,7 @@
 
     <article>
       <div class="box">
-        <h2>02 <%= t('calendar.mai')%></h2>
+        <h2>01 <%= t('calendar.mai')%></h2>
       </div>
       <div class="present">
         <div class="bauble clickable"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg46"></span></div>
@@ -1018,10 +1018,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>03 <%= t('calendar.mai')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>03 <%= t('calendar.mai')%><p><%=t ('calendar.challenge')%> 11<p></h2>
       </div>
       <div class="present">
-        <div class="bauble clickable"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg47"></span></div>
+        <div class="bauble clickable"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg47"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg47" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -1039,10 +1039,10 @@
 
     <article>
       <div class="box">
-        <p class="p1"><%=t("calendar.winner-box") %></p><h2>04 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 12<p></h2>
+        <h2>04 <%= t('calendar.mai')%></h2>
       </div>
       <div class="present">
-        <div class="bauble clickable"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg48"></span></div>
+        <div class="bauble clickable"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg48"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg48" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -1144,10 +1144,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>09 <%= t('calendar.mai')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>09 <%= t('calendar.mai')%><p><%=t ('calendar.challenge')%> 12<p></h2>
       </div>
       <div class="present">
-        <div class="bauble clickable"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg53"></span></div>
+        <div class="bauble clickable"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg53"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg53" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
