--- a/app/assets/stylesheets/home2.scss
+++ b/app/assets/stylesheets/home2.scss
@@ -58,7 +58,7 @@
 .banner-img2 {
   display: block;
   max-width: 360px;
-  height: 164px;
+  max-height: 164px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -101,6 +101,7 @@
   padding-bottom: 120px;
 }
 
+
 /*********************Responsive Mobile and IPAD ***********************/
 
 /* Banner design */
@@ -116,13 +117,20 @@
 
   }
   .text-box p{
-    font-size: 16px;
-    line-height: 16px;
+    font-size: 15px;
+    line-height: 23px;
   }
 
   .banner-img {
     display: block;
-    margin-top: 50px;
+    margin-top: 40px;
+    max-width: 100%;
+    height: auto;
+  }
+
+  .banner-img2 {
+    display: block;
+    margin-top: 40px;
     max-width: 100%;
     height: auto;
   }
@@ -156,5 +164,14 @@
 
   #carousel h1{
         font-size: 40px;
+  }
+
+  .block-product img{
+    display: block;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 300px;
+    height: auto;
   }
 }
