--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hopen Family : Your grandparents closer more than ever.</title>
+    <title>Hopen Family : The first smart object for your grandparents.</title>
 
     <meta name="copyright" content="Hopen Family is a registred trademark of Hopen Project, INC." />
     <meta name="description" content= "The first App where family share instantly with the grandparents" />
