--- a/app/views/pages/home2.html.erb
+++ b/app/views/pages/home2.html.erb
@@ -11,10 +11,10 @@
             <div class="col-xs-12 col-sm-12 col-md-12">
               <div class="kick">
                 <% if I18n.locale == :fr %>
-                  <%= link_to (image_tag "kickstarterfr.png"), "https://www.kickstarter.com/projects/hopenfamily/457350484?token=32cf1fb1", target:"_blank" %>
+                  <%= link_to (image_tag "kickstarterfr.png"), "https://www.kickstarter.com/projects/hopenfamily/hopen-family-the-first-smart-object-for-your-grand", target:"_blank" %>
                 <% end %>
                 <% if I18n.locale == :en %>
-                  <%= link_to (image_tag "kickstarter.png"), "https://www.kickstarter.com/projects/hopenfamily/457350484?token=32cf1fb1",target:"_blank" %>
+                  <%= link_to (image_tag "kickstarter.png"), "https://www.kickstarter.com/projects/hopenfamily/hopen-family-the-first-smart-object-for-your-grand",target:"_blank" %>
                 <% end %>
               </div>
             </div>
@@ -63,12 +63,12 @@
         <p><%= t "product.text" %></p>
         <% if I18n.locale == :fr %>
           <div class="block-product">
-            <%= link_to (image_tag "kickstarterfr.png"), "https://www.kickstarter.com/projects/hopenfamily/457350484?token=32cf1fb1", target:"_blank" %>
+            <%= link_to (image_tag "kickstarterfr.png"), "https://www.kickstarter.com/projects/hopenfamily/hopen-family-the-first-smart-object-for-your-grand", target:"_blank" %>
           </div>
         <% end %>
         <% if I18n.locale == :en %>
           <div class="block-product">
-            <%= link_to (image_tag "kickstarter.png"), "https://www.kickstarter.com/projects/hopenfamily/457350484?token=32cf1fb1",target:"_blank" %>
+            <%= link_to (image_tag "kickstarter.png"), "https://www.kickstarter.com/projects/hopenfamily/hopen-family-the-first-smart-object-for-your-grand",target:"_blank" %>
           </div>
         <% end %>
         </div>
@@ -170,10 +170,10 @@
   <div class="row">
     <div class="col-xs-12 col-md-12 text-center support-us">
       <% if I18n.locale == :fr %>
-        <%= link_to (image_tag "bouton2.png"), "https://www.kickstarter.com/projects/hopenfamily/457350484?token=32cf1fb1",class:"banner-img", target:"_blank" %>
+        <%= link_to (image_tag "bouton2.png"), "https://www.kickstarter.com/projects/hopenfamily/hopen-family-the-first-smart-object-for-your-grand",class:"banner-img", target:"_blank" %>
       <% end %>
       <% if I18n.locale == :en %>
-        <%= link_to (image_tag "support-us.png"), "https://www.kickstarter.com/projects/hopenfamily/457350484?token=32cf1fb1",class:"banner-img",target:"_blank" %>
+        <%= link_to (image_tag "support-us.png"), "https://www.kickstarter.com/projects/hopenfamily/hopen-family-the-first-smart-object-for-your-grand",class:"banner-img",target:"_blank" %>
       <% end %>
     </div>
   </div>
