Add new base line

--- a/app/views/pages/home2.html.erb
+++ b/app/views/pages/home2.html.erb
@@ -4,8 +4,7 @@
   <div class="containerBox">
       <div class="text-box">
         <h1>Hopen Family
-        <p><%= t "banner.title_under" %>
-        <br><%= t "banner.title_under2" %></p></h1>
+        <p><%= t "banner.title_under" %></p></h1>
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12">
